Fix alignment sudoku board for 9x9

--- a/sudoku-app/src/components/SudokuCell/SudokuCell.css
+++ b/sudoku-app/src/components/SudokuCell/SudokuCell.css
@@ -1,5 +1,5 @@
 .sudoku-cell {
-  border: 1px solid #cfd2d5;
+  border: none;
   background-color: white;
   text-align: center;
   font-size: 1.3rem;
@@ -12,8 +12,6 @@
   cursor: pointer;
   width: 100%;
   height: 100%;
-  min-height: 50px;
-  min-width: 50px;
   box-sizing: border-box;
 }
 
